Fix display issues
Corrects two errors:
- radio button display was messed up on mobile due to extra slider
- zoom was losing the left and top of the image due to translation issues

--- a/scripts/css.css
+++ b/scripts/css.css
@@ -37,6 +37,17 @@
     justify-content: center;
 }
 
+.topBarRadio{
+    width: 18vw;
+    height: 12vh;
+    border-left: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    vertical-align: middle;
+}
+
 
 #file-input{
     flex-direction: row;
@@ -112,7 +123,15 @@
     border: 0px solid #ccc;
     border-left: 0px solid #ccc;
     border-right: 0px solid #ccc;
+}
 
+#paintBlur{
+    width:100%;
+    height:3vh;
+}
+
+#paintBlur br{
+    display: none;
 }
 
 
